--- a/pessoa-crud/appsettings.json
+++ b/pessoa-crud/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AuthDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=pessoa-crud;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
