atualizando o ConnectionStrings para o banco atual

--- a/pessoa-crud/appsettings.json
+++ b/pessoa-crud/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=pessoa-crud;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthDbContextConnection": "Server=localhost\\SQLEXPRESS; Database = ESTUDO1; Trusted_Connection = true"
   }
 }
